--- a/src/docs/asciidoc/etc/release-notes.adoc
+++ b/src/docs/asciidoc/etc/release-notes.adoc
@@ -1,3 +1,6 @@
 == Release notes
+** v-0.0.6
+- Use Java instead of Kotlin
+
 ** v-0.0.5
 - Added endpoint create <<Create user>> and get users by id <<Get user by id>>
